--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "node bot.js"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
-    "tmi.js": "^1.2.1",
     "nodemailer": "^6.4.2",
-    "nodemailer-smtp-pool": "^2.8.3"
+    "nodemailer-smtp-pool": "^2.8.3",
+    "tmi.js": "^1.2.1"
   },
   "engines": {
     "node": "12.x"
